--- a/src/components/subject.css
+++ b/src/components/subject.css
@@ -30,3 +30,32 @@ form {
   justify-content: center;
   align-items: flex-end;
 }
+
+.subject-form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-div {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100%;
+  width: 70%;
+  margin-left: 2rem;
+  background-color: rgba(128, 136, 252, 0.308);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 7px;
+}
+
+.input2 {
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+}
